--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "scripts": {
     "start": "node ./bin/www.js",
-    "db:createusers": "node -r dotenv/config ./db/scripts/users/createTable.js",
     "dev": "nodemon -r dotenv/config ./bin/www.js",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "db:create-towers-table": "node -r dotenv/config ./db/scripts/towers/createTable.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
